// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"favicon" option 1`] = `
"<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            
            
            
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />
            <link rel=\\"shortcut icon\\" href=\\"/favicon.ico\\" />
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            
            <div id=\\"react-view\\"></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.SPLITS = {}
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDGxqHiEs7kHDY44Xxn5w1REclHuC2M3QGvQLK2naeWTzCJpXWctF+ki6HirgIkIyx4BfBIqlJbTLnShL1wyMPDARKNI4xpk9YGnthf9zGmb1ZElRTRh7QU4i6pTuK68/j92srOJYT+ccoyqPwGMJheURmW3JxPMKpqVhILhX7+HB82hJ5hxYefuQi4Y2Ad+zmnB1q/YWY+3O8tfpLoprbCH8lG9bQF8y4L3QXepFHWKkGQrxc6kLWmC9u7yEbUehrEnpZXFcp1Okw8Ox0gxT6GYtbpbMKeQmydOpe4ag6ReKjpokG/1ivpFHdgH+eVbB+sESBiVozhNa9vPJ6FBHKN2GDlyf5Gy7oUkFexI6ozoxxhBmdxFcm8+BvO9nuC7cThbhLgot65FgVWXtWnkhh5xA+viJ5vnfnY2/UbytYsQvQ==\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
            
          </body>
        </html>"
`;

exports[`Base rendering of HTML template 1`] = `
"<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            
            
            
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />
            
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            
            <div id=\\"react-view\\"></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.SPLITS = {}
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDGxqHiEs7kHDY44Xxn5w1REclHuC2M3QGvQLK2naeWTzCJpXWctF+ki6HirgIkIyx4BfBIqlJbTLnShL1wyMPDARKNI4xpk9YGnthf9zGmb1ZElRTRh7QU4i6pTuK68/j92srOJYT+ccoyqPwGMJheURmW3JxPMKpqVhILhX7+HB82hJ5hxYefuQi4Y2Ad+zmnB1q/YWY+3O8tfpLoprbCH8lG9bQF8y4L3QXepFHWKkGQrxc6kLWmC9u7yEbUehrEnpZXFcp1Okw8Ox0gxT6GYtbpbMKeQmydOpe4ag6ReKjpokG/1ivpFHdgH+eVbB+sESBiVozhNa9vPJ6FBHKN2GDlyf5Gy7oUkFexI6ozoxxhBmdxFcm8+BvO9nuC7cThbhLgot65FgVWXtWnkhh5xA+viJ5vnfnY2/UbytYsQvQ==\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
            
          </body>
        </html>"
`;

exports[`Config overriding for injection 1`] = `
"<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            
            
            
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />
            
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            
            <div id=\\"react-view\\"></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.SPLITS = {}
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDGxqHiEs7kHDY44Xxn5w1REclHuC2M3QGvQLK2naeWTzCJpXWctF+ki6HirgIkIyx4BfBIqlJbTLnShL1wyMPDARKNI4xpk9YGnthf9zGmb1ZElRTRh7QU4i6pTuK68/j92srOJYT+ccoyqPwGMJheURmW3JxPMKpqVhILhX7+HB82hJ5hxYefuQi4Y2Ad+zmnB1q/YWY+3O8tfpLoprbCH8lG9bQF8y4L3QXepFHWKkGQrxc6kLWmC9u7yEbUehrEnpZXFcp1Okw8Ox0gxT6GYtbpbMKeQmydOpe4ag6ReKjpokG/1ivpFHdgH+eVbB+sESBiVozhNa9vPJ6FBHKN2GDlyf5Gy7oUkFexI6ozoxxhBmdxFcm8+BvO9nuC7cTi9VQX8OW0+JoVNYcuVavL1zUfXa/F+j/uVT8wF5mV+OD+JFE4PXHgKEkoOxVKClTYCuusupNawOFnXjAKzQTAr1w2Y1xfsnhT1PDqLQP3ngQ==\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
            
          </body>
        </html>"
`;

exports[`Hemlet integration works 1`] = `
"<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            
            <title data-react-helmet=\\"true\\">Test Page Title</title>
            <meta data-react-helmet=\\"true\\" property=\\"description\\" content=\\"Test Page Description\\"/>
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />
            
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            
            <div id=\\"react-view\\"><div><p>Hello World!</p><p>Goodbye World!</p></div></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.SPLITS = {}
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDGxqHiEs7kHDY44Xxn5w1REclHuC2M3QGvQLK2naeWTzCJpXWctF+ki6HirgIkIyx4BfBIqlJbTLnShL1wyMPDARKNI4xpk9YGnthf9zGmb1ZElRTRh7QU4i6pTuK68/j92srOJYT+ccoyqPwGMJheURmW3JxPMKpqVhILhX7+HB82hJ5hxYefuQi4Y2Ad+zmnB1q/YWY+3O8tfpLoprbCH8lG9bQF8y4L3QXepFHWKkGQrxc6kLWmC9u7yEbUehrEnpZXFcp1Okw8Ox0gxT6GYtbpbMKeQmydOpe4ag6ReKjpokG/1ivpFHdgH+eVbB+sESBiVozhNa9vPJ6FBHKN2GDlyf5Gy7oUkFexI6ozoxxhBmdxFcm8+BvO9nuC7cThbhLgot65FgVWXtWnkhh5xA+viJ5vnfnY2/UbytYsQvQ==\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
            
          </body>
        </html>"
`;

exports[`Injection of additional JS scripts 1`] = `
"<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            <script>1-st script after opening <head></script><script>2-nd script after opening <head></script>
            
            
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />
            
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            <script>1-st script after opening <body></script><script>2-nd script after opening <body></script>
            <div id=\\"react-view\\"></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.SPLITS = {}
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDGxqHiEs7kHDY44Xxn5w1REclHuC2M3QGvQLK2naeWTzCJpXWctF+ki6HirgIkIyx4BfBIqlJbTLnShL1wyMPDARKNI4xpk9YGnthf9zGmb1ZElRTRh7QU4i6pTuK68/j92srOJYT+ccoyqPwGMJheURmW3JxPMKpqVhILhX7+HB82hJ5hxYefuQi4Y2Ad+zmnB1q/YWY+3O8tfpLoprbCH8lG9bQF8y4L3QXepFHWKkGQrxc6kLWmC9u7yEbUehrEnpZXFcp1Okw8Ox0gxT6GYtbpbMKeQmydOpe4ag6ReKjpokG/1ivpFHdgH+eVbB+sESBiVozhNa9vPJ6FBHKN2GDlyf5Gy7oUkFexI6ozoxxhBmdxFcm8+BvO9nuC7cThbhLgot65FgVWXtWnkhh5xA+viJ5vnfnY2/UbytYsQvQ==\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
            <script>Dummy JS Sript</script><script>Another Dummy JS Script</script><script>Yet another Dummy JS Script</script>
          </body>
        </html>"
`;

exports[`Server-side rendering (SSR); injection of CSS chunks & Redux state 1`] = `
"<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            
            <title data-react-helmet=\\"true\\"></title>
            
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" /><link href=\\"/test/public/path/test-chunk-a-1511941200000.css\\" rel=\\"stylesheet\\" /><link href=\\"/test/public/path/test-chunk-b-1511941200000.css\\" rel=\\"stylesheet\\" />
            
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            
            <div id=\\"react-view\\"><div>Hello Wold!</div></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.SPLITS = {}
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDGxqHiEs7kHDY44Xxn5w1REclHuC2M3QGvQLK2naeWTzCJpXWctF+ki6HirgIkIyx4BfBIqlJbTLnShL1wyMPDARKNI4xpk9YGnthf9zGmb1ZElRTRh7QU4i6pTuK68/j92srOJYT+ccoyqPwGMJheURmW3JxPMKpqVhILhX7+HB82hJ5hxYefuQi4Y2Ad+zmnB1q/YWY+3O8tfpLoprbCH8lG9bQF8y4L3QXepFHWKkGQrxc6kLWmC9u7yEbUehrEnpZXFcp1Okw8Ox0gxT6GYtbpbMKeQmydOpe4ag6ReKjpokG/1ivpFHdgH+eVbB+sESBiVozhNa9vPJ6FBHKN2GDlyf5Gy7oUkFexI6ozoxxhBmdxFcm8+BvO9nuC7cThbhLgot65FgVWXtWnkhh5xv8WlAVnlWdgNvB/Q3AKydAbxyFdVF8mjQAb1ExDvse1qjIa7JIOESht5ICAGbdminx9y/KAn4bYuq7OEVZTV+owDk7nfArmDZTvVMMFaL0c=\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/test-chunk-b-1511941200000.js\\" type=\\"application/javascript\\"></script>
            
          </body>
        </html>"
`;

exports[`Setting of response HTTP status the server-side rendering 1`] = `
"HTTP STATUS: 404
<!DOCTYPE html>
        <html lang=\\"en\\">
          <head>
            
            <title data-react-helmet=\\"true\\"></title>
            
            <meta name=\\"theme-color\\" content=\\"#FFFFFF\\"/>
            
            <link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\" />
            
            <meta charset=\\"utf-8\\" />
            <meta
              content=\\"width=device-width,initial-scale=1.0\\"
              name=\\"viewport\\"
            />
          </head>
          <body>
            
            <div id=\\"react-view\\"><div>404 Error Test</div></div>
            <script
              id=\\"inj\\"
              type=\\"application/javascript\\"
              nonce=\\"abcdef-dummy-nonce\\"
            >
              window.SPLITS = {}
              window.INJ=\\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDGxqHiEs7kHDY44Xxn5w1REclHuC2M3QGvQLK2naeWTzCJpXWctF+ki6HirgIkIyx4BfBIqlJbTLnShL1wyMPDARKNI4xpk9YGnthf9zGmb1ZElRTRh7QU4i6pTuK68/j92srOJYT+ccoyqPwGMJheURmW3JxPMKpqVhILhX7+HB82hJ5hxYefuQi4Y2Ad+zmnB1q/YWY+3O8tfpLoprbCH8lG9bQF8y4L3QXepFHWKkGQrxc6kLWmC9u7yEbUehrEnpZXFcp1Okw8Ox0gxT6GYtbpbMKeQmydOpe4ag6ReKjpokG/1ivpFHdgH+eVbB+sESBiVozhNa9vPJ6FBHKN2GDlyf5Gy7oUkFexI6ozoxxhBmdxFcm8+BvO9nuC7cThbhLgot65FgVWXtWnkhh5xA+viJ5vnfnY2/UbytYsQvQ==\\"
            </script>
            <script src=\\"/test/public/path/polyfills-1511941200000.js\\" type=\\"application/javascript\\"></script><script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
            
          </body>
        </html>"
`;

exports[`Throws in case of forge.random.getBytes(..) failure 1`] = `[Error: Emulated Failure of forge.random.getBytes(..)]`;

exports[`Throws in case of forge.random.getBytes(..) failure 2`] = `""`;
